Import google font

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,6 @@
     <title>Lincoln 2021</title>
   </head>
   <body>
-    <div id="app">
-      <h1>Lincoln's back to have fun!!! Hello world</h1>
-    </div>
+    <div id="app"></div>
   </body>
 </html>
